src/scss/pages/_teaching-resources.scss
// Teaching Resources

.instructor-tile {
  max-width: 600px;
  min-height: 135px;

  .tile-link {
    border: solid 1px $lightest-grey;
    display: flex;
    flex-direction: row;
    min-height: 180px;
    position: static;
  }
}

.author-photo {
  flex-grow: 0;
  margin-right: 1.5em;
  min-width: 140px;
  position: relative;

  &::before {
    background-position: center center;
    background-repeat: no-repeat;
    background-size: auto 140px;
    border: solid 1px $grey;
    border-radius: 50%;
    content: '';
    height: 140px;
    left: 0;
    position: absolute;
    top: 0;
    width: 140px;
  }
}

.author-photo-carr::before {
  background-image: url($author-photo-carr);
}

.author-photo-foasberg::before {
  background-image: url($author-photo-foasberg);
}

.author-photo-gibson::before {
  background-image: url($author-photo-gibson);
}

.author-photo-wirth::before {
  background-image: url($author-photo-wirth);
}

.author-photo-woods::before {
  background-image: url($author-photo-woods);
}

.author-role {
  background-color: $white;
  border: solid 1px $lightest-grey;
  border-radius: 5px;
  color: $dark-grey;
  font-size: 0.9em;
  left: 1.2em;
  position: absolute;
  text-align: center;
  top: 170px;
  width: 140px;
  z-index: 10;
}

.instructor-tile-small {
  margin-top: 2em;
  min-height: auto;

  p {
    margin: 0 0 0.5em 0;
  }

  .tile-link {
    border-color: $light-grey;
    border-radius: 0.8em;
    box-shadow: none;
    min-height: auto;
  }

  .author-photo {
    min-width: 50px;

    &::before {
      background-size: auto 50px;
      height: 50px;
      width: 50px;
    }
  }
}

.author-meta-foasberg,
.author-meta-woods {
  display: none;
}

.teaching-resources {
  .author-photo::before {
    border: 0;
    border-radius: 0;
  }

  .author-role {
    background: $palette-maroon;
    border: 0;
    border-radius: 0;
    color: $white;
    left: 0;
    opacity: 0.95;
    top: 120px;
    transition: opacity 0.2s ease-in-out;

    @include breakpoint(sm) {
      top: 117px;
    }
  }

  .tile-link {
    border: 0;
    box-shadow: none;

    &:hover .author-role {
      opacity: 1;
    }
  }

  .instructor-tile {
    font-size: 0.9em;
    line-height: 1.5em;

    .author-role {
      font-size: 1.1em;
    }
  }
}

.single .tile-body p {
  display: block;
}

